--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,35 +12,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-11 Wed 18:15]
+#+CAPTION: Clock summary at [2017-01-11 Wed 20:24]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *58:53* |       |      | 100.0 |
+| *Total time*                                                                | *60:07* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 58:53   |       |      | 100.0 |
-| Active                                                                      |         | 58:53 |      | 100.0 |
+| Stories                                                                     | 60:07   |       |      | 100.0 |
+| Active                                                                      |         | 60:07 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   1.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.6 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.8 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  14.7 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.7 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  14.4 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.7 |
 | COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.8 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  11.3 |
-| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.9 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.5 |
-| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   9.8 |
-| COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   2.1 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  11.0 |
+| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.8 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.4 |
+| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   9.6 |
+| COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   2.0 |
 | CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   1.0 |
 | COMPLETED Fix assorted windows warnings                                     |         |       | 0:19 |   0.5 |
-| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  12.8 |
+| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  12.5 |
 | COMPLETED Fix borked windows build                                          |         |       | 1:54 |   3.2 |
-| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.9 |
+| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.8 |
 | STARTED Add appveyor support for bintray                                    |         |       | 1:00 |   1.7 |
 | STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   2.0 |
-| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   8.2 |
-| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   2.2 |
-| STARTED Add upsilon support                                                 |         |       | 1:52 |   3.2 |
+| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   8.1 |
+| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   2.1 |
+| STARTED Add upsilon support                                                 |         |       | 2:08 |   3.5 |
+| STARTED Add validation around instatitation of abstract classes             |         |       | 0:58 |   1.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -958,6 +959,7 @@ Notes:
   or a sequence generator directly.
 
 *** STARTED Add upsilon support                                       :story:
+    CLOCK: [2017-01-11 Wed 18:16]--[2017-01-11 Wed 18:32] =>  0:16
     CLOCK: [2017-01-11 Wed 17:35]--[2017-01-11 Wed 18:15] =>  0:40
     CLOCK: [2017-01-11 Wed 16:05]--[2017-01-11 Wed 17:17] =>  1:12
 
@@ -966,6 +968,21 @@ into Dogen. The easiest thing to do is to create a simple frontend
 which imports these models into yarn. We will subsequently have to
 map these types into native types, depending on the language - or
 probably into LAM types.
+
+*** STARTED Add validation around instatitation of abstract classes   :story:
+    CLOCK: [2017-01-11 Wed 19:53]--[2017-01-11 Wed 20:24] =>  0:31
+    CLOCK: [2017-01-11 Wed 19:25]--[2017-01-11 Wed 19:52] =>  0:27
+
+At present dogen allows one to create variables of an abstract
+class. We should have a validation rule to stop this.
+
+*** Model references are not transitive                               :story:
+
+For some reason we do not seem to be following references of
+referenced models. We should load them automatically, now that they
+are part of the meta-data. However, the =yarn.json= model breaks when
+we remove the reference to annotation even though it does not use this
+model directly and =yarn= is referencing it correctly.
 
 *** Add support for boxed types                                       :story:
 
