--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,36 +12,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-11 Wed 21:17]
+#+CAPTION: Clock summary at [2017-01-11 Wed 22:28]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *60:57* |       |      | 100.0 |
+| *Total time*                                                                | *61:41* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 60:57   |       |      | 100.0 |
-| Active                                                                      |         | 60:57 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   1.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.6 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.6 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  14.2 |
+| Stories                                                                     | 61:41   |       |      | 100.0 |
+| Active                                                                      |         | 61:41 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   0.9 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.5 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.5 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  14.1 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.7 |
 | COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.8 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.9 |
-| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.8 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.8 |
+| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.7 |
 | COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.3 |
-| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   9.5 |
+| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   9.4 |
 | COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   2.0 |
-| CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   1.0 |
+| CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   0.9 |
 | COMPLETED Fix assorted windows warnings                                     |         |       | 0:19 |   0.5 |
-| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  12.4 |
+| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  12.2 |
 | COMPLETED Fix borked windows build                                          |         |       | 1:54 |   3.1 |
-| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.7 |
-| COMPLETED Add validation around instatitation of abstract classes           |         |       | 1:48 |   3.0 |
-| STARTED Add appveyor support for bintray                                    |         |       | 1:00 |   1.6 |
+| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.6 |
+| COMPLETED Add validation around instatitation of abstract classes           |         |       | 1:48 |   2.9 |
+| STARTED Add appveyor support for bintray                                    |         |       | 1:15 |   2.0 |
+| STARTED Add upsilon support                                                 |         |       | 2:37 |   4.2 |
 | STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   1.9 |
-| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   8.0 |
+| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.9 |
 | STARTED Add support for generic container types to C#                       |         |       | 1:16 |   2.1 |
-| STARTED Add upsilon support                                                 |         |       | 2:08 |   3.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -866,20 +866,8 @@ Rule:
   base class. It should allow pointers to the base class though (raw,
   shared pointers, boost optional etc).
 
-*** STARTED Add upsilon support                                       :story:
-    CLOCK: [2017-01-11 Wed 21:28]--[2017-01-11 Wed 21:46] =>  0:18
-    CLOCK: [2017-01-11 Wed 21:17]--[2017-01-11 Wed 21:28] =>  0:11
-    CLOCK: [2017-01-11 Wed 18:16]--[2017-01-11 Wed 18:32] =>  0:16
-    CLOCK: [2017-01-11 Wed 17:35]--[2017-01-11 Wed 18:15] =>  0:40
-    CLOCK: [2017-01-11 Wed 16:05]--[2017-01-11 Wed 17:17] =>  1:12
-
-A customer has models in a legacy format, which need to be imported
-into Dogen. The easiest thing to do is to create a simple frontend
-which imports these models into yarn. We will subsequently have to
-map these types into native types, depending on the language - or
-probably into LAM types.
-
 *** STARTED Add appveyor support for bintray                          :story:
+    CLOCK: [2017-01-11 Wed 22:10]--[2017-01-11 Wed 22:25] =>  0:15
     CLOCK: [2017-01-10 Tue 15:10]--[2017-01-10 Tue 16:10] =>  1:00
 
 It seems appveyor also supports bintray:
@@ -903,6 +891,23 @@ Sample:
 :   publish: true
 :   override: true
 :   explode: true
+
+  on:
+    branch: master                 # release from master branch only
+    appveyor_repo_tag: true
+
+*** STARTED Add upsilon support                                       :story:
+    CLOCK: [2017-01-11 Wed 21:28]--[2017-01-11 Wed 21:46] =>  0:18
+    CLOCK: [2017-01-11 Wed 21:17]--[2017-01-11 Wed 21:28] =>  0:11
+    CLOCK: [2017-01-11 Wed 18:16]--[2017-01-11 Wed 18:32] =>  0:16
+    CLOCK: [2017-01-11 Wed 17:35]--[2017-01-11 Wed 18:15] =>  0:40
+    CLOCK: [2017-01-11 Wed 16:05]--[2017-01-11 Wed 17:17] =>  1:12
+
+A customer has models in a legacy format, which need to be imported
+into Dogen. The easiest thing to do is to create a simple frontend
+which imports these models into yarn. We will subsequently have to
+map these types into native types, depending on the language - or
+probably into LAM types.
 
 *** STARTED Add auxiliary function properties to c#                   :story:
     CLOCK: [2017-01-08 Sun 11:27]--[2017-01-08 Sun 11:40] =>  0:13
