--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,34 +12,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-11 Wed 23:26]
+#+CAPTION: Clock summary at [2017-01-12 Thu 09:43]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *62:39* |       |      | 100.0 |
+| *Total time*                                                                | *63:12* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 62:39   |       |      | 100.0 |
-| Active                                                                      |         | 62:39 |      | 100.0 |
+| Stories                                                                     | 63:12   |       |      | 100.0 |
+| Active                                                                      |         | 63:12 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.5 |
 | COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.4 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  13.8 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  13.7 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.7 |
 | COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.7 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.6 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.5 |
 | COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.6 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.2 |
-| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   9.3 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.1 |
+| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   9.2 |
 | COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   1.9 |
 | CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   0.9 |
 | COMPLETED Fix assorted windows warnings                                     |         |       | 0:19 |   0.5 |
-| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  12.0 |
+| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  11.9 |
 | COMPLETED Fix borked windows build                                          |         |       | 1:54 |   3.0 |
 | COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.5 |
-| COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.9 |
+| COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.8 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       | 0:21 |   0.6 |
-| STARTED Add appveyor support for bintray                                    |         |       | 1:15 |   2.0 |
-| STARTED Add upsilon support                                                 |         |       | 2:37 |   4.2 |
+| STARTED Add appveyor support for bintray                                    |         |       | 1:48 |   2.8 |
+| STARTED Add upsilon support                                                 |         |       | 2:37 |   4.1 |
 | STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   1.9 |
 | STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.7 |
 | STARTED Add support for generic container types to C#                       |         |       | 1:16 |   2.0 |
@@ -877,6 +877,7 @@ resulted in an enumeration. The error should have been picked up by
 noticing the enumerators had a type. Add a validation error for this.
 
 *** STARTED Add appveyor support for bintray                          :story:
+    CLOCK: [2017-01-12 Thu 09:10]--[2017-01-12 Thu 09:43] =>  0:33
     CLOCK: [2017-01-11 Wed 22:10]--[2017-01-11 Wed 22:25] =>  0:15
     CLOCK: [2017-01-10 Tue 15:10]--[2017-01-10 Tue 16:10] =>  1:00
 
@@ -905,6 +906,11 @@ Sample:
   on:
     branch: master                 # release from master branch only
     appveyor_repo_tag: true
+
+Errors:
+
+: Deploying using BinTray provider
+: Uploading "dogen-0.95.0-Windows-AMD64.msi" to BinTray as domaindrivenconsulting/Dogen/Dogen/0.94.0/dogen-0.95.0-Windows-AMD64.msi...Error uploading artifact to BinTray (401 status): This resource requires authentication
 
 *** STARTED Add upsilon support                                       :story:
     CLOCK: [2017-01-11 Wed 21:28]--[2017-01-11 Wed 21:46] =>  0:18
