--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,36 +12,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-12 Thu 10:21]
+#+CAPTION: Clock summary at [2017-01-12 Thu 11:01]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *63:47* |       |      | 100.0 |
+| *Total time*                                                                | *64:26* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 63:47   |       |      | 100.0 |
-| Active                                                                      |         | 63:47 |      | 100.0 |
+| Stories                                                                     | 64:26   |       |      | 100.0 |
+| Active                                                                      |         | 64:26 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.5 |
 | COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.3 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  13.6 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  13.5 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.7 |
 | COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.7 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.4 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.3 |
 | COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.5 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.1 |
-| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   9.1 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.0 |
+| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   9.0 |
 | COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   1.9 |
 | CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   0.9 |
 | COMPLETED Fix assorted windows warnings                                     |         |       | 0:19 |   0.5 |
-| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  11.8 |
-| COMPLETED Fix borked windows build                                          |         |       | 1:54 |   3.0 |
+| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  11.7 |
+| COMPLETED Fix borked windows build                                          |         |       | 1:54 |   2.9 |
 | COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.4 |
 | COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.8 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       | 0:21 |   0.5 |
 | STARTED Add appveyor support for bintray                                    |         |       | 1:48 |   2.8 |
-| STARTED Add upsilon support                                                 |         |       | 3:12 |   5.0 |
-| STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   1.9 |
-| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.6 |
+| STARTED Add upsilon support                                                 |         |       | 3:51 |   6.0 |
+| STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   1.8 |
+| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.5 |
 | STARTED Add support for generic container types to C#                       |         |       | 1:16 |   2.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -913,6 +913,7 @@ Errors:
 : Uploading "dogen-0.95.0-Windows-AMD64.msi" to BinTray as domaindrivenconsulting/Dogen/Dogen/0.94.0/dogen-0.95.0-Windows-AMD64.msi...Error uploading artifact to BinTray (401 status): This resource requires authentication
 
 *** STARTED Add upsilon support                                       :story:
+    CLOCK: [2017-01-12 Thu 10:22]--[2017-01-12 Thu 11:01] =>  0:39
     CLOCK: [2017-01-12 Thu 10:17]--[2017-01-12 Thu 10:21] =>  0:04
     CLOCK: [2017-01-12 Thu 10:05]--[2017-01-12 Thu 10:16] =>  0:11
     CLOCK: [2017-01-12 Thu 09:44]--[2017-01-12 Thu 10:04] =>  0:20
